--- a/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
@@ -23,36 +23,36 @@ GRE_national_populist_party:0 "EEL"
 GRE_national_populist_party_long:0 "민족 그리스 군단"
 
 ### Ideas ###
-GRE_legacy_of_alexander_idea:0 "Legacy of Alexander"
+GRE_legacy_of_alexander_idea:0 "알렉산드로스의 유산"
 GRE_legacy_of_alexander_idea_desc:0 "The Greeks are a people accustomed to war, and nothing stirs them up quite as the thought of their hard-won independence being taken away once more."
-GRE_legacy_of_alexander2_idea:0 "Legacy of Alexander"
+GRE_legacy_of_alexander2_idea:0 "알렉산드로스의 유산"
 GRE_legacy_of_alexander2_idea_desc:0 "The Greeks are a people accustomed to war, and nothing stirs them up quite as the thought of their hard-won independence being taken away once more."
-GRE_memories_of_king:0 "Memories of the King"
+GRE_memories_of_king:0 "왕국의 기억"
 GRE_memories_of_king_desc:0 "While the Greek monarchy was officially abolished in 1931 after a tumultuous decade of coups and counter-coups, there are still those within our nation who continue to abide by monarchist principles, and are a major source of unrest within our nation."
-GRE_foreign_industry_GER1:0 "German-Owned Industry"
+GRE_foreign_industry_GER1:0 "독일인 소유의 산업"
 GRE_foreign_industry_GER1_desc:0 "Thanks to our incredible war debts after the end of the disastrous Weltkrieg, King Constantine signed a deal allowing German investors unfettered access to the Greek economy. As a result, almost half of our industry is owned by foreign creditors and banks - none of whom have our best interests in mind."
-GRE_foreign_industry_GER2:0 "Partially-Seized German-Owned Industry"
+GRE_foreign_industry_GER2:0 "부분적으로 압류된 독일인 소유의 산업"
 GRE_foreign_industry_GER2_desc:0 "Thanks to our incredible war debts after the end of the disastrous Weltkrieg, King Constantine signed a deal allowing German investors unfettered access to the Greek economy. As a result, almost a quarter of our industry is owned by foreign creditors and banks - none of whom have our best interests in mind."
-GRE_foreign_industry_GER3:0 "Bailed Out German-Owned Industry"
+GRE_foreign_industry_GER3:0 "독일인 소유의 산업 긴급 구제"
 GRE_foreign_industry_GER3_desc:0 "Thanks to our incredible war debts after the end of the disastrous Weltkrieg, King Constantine signed a deal allowing German investors unfettered access to the Greek economy. As a result, almost half of our industry is owned by foreign creditors and banks - though thankfully our having bailed them out during the Black Monday crisis leaves us on far better terms with them."
-GRE_foreign_industry_AUS1:0 "Austrian-Owned Industry"
+GRE_foreign_industry_AUS1:0 "오스트리아인 소유의 산업"
 GRE_foreign_industry_AUS1_desc:0 "Thanks to our incredible war debts after the end of the disastrous Weltkrieg, King Constantine signed a deal allowing Austrian investors unfettered access to the Greek economy. As a result, almost half of our industry is owned by foreign creditors and banks - none of whom have our best interests in mind."
-GRE_foreign_industry_AUS2:0 "Partially-Seized Austrian-Owned Industry"
+GRE_foreign_industry_AUS2:0 "부분적으로 압류된 오스트리아인 소유의 산업"
 GRE_foreign_industry_AUS2_desc:0 "Thanks to our incredible war debts after the end of the disastrous Weltkrieg, King Constantine signed a deal allowing Austrian investors unfettered access to the Greek economy. As a result, almost a quarter of our industry is owned by foreign creditors and banks - none of whom have our best interests in mind."
-GRE_foreign_industry_AUS3:0 "Bailed Out Austrian-Owned Industry"
+GRE_foreign_industry_AUS3:0 "오스트리아인 소유의 산업 긴급 구제"
 GRE_foreign_industry_AUS3_desc:0 "Thanks to our incredible war debts after the end of the disastrous Weltkrieg, King Constantine signed a deal allowing Austrian investors unfettered access to the Greek economy. As a result, almost half of our industry is owned by foreign creditors and banks - though thankfully our having bailed them out during the Black Monday crisis leaves us on far better terms with them."
-GRE_black_monday_1:0 "Effects of Black Monday"
-GRE_black_monday_2:0 "Recovering from Black Monday"
-GRE_black_monday_3:0 "Almost Recovered from Black Monday"
+GRE_black_monday_1:0 "검은 월요일의 여파"
+GRE_black_monday_2:0 "검은 월요일에서의 회복"
+GRE_black_monday_3:0 "검은 월요일에서 거의 회복됨"
 GRE_german_sanctions:0 "German Sanctions"
 GRE_austrian_sanctions:0 "Austrian Sanctions"
-GRE_privatised_industry:0 "Privatized Industry"
-GRE_nationalised_industry:0 "Nationalized Industry"
-GRE_strong_executive:0 "Strong Executive"
-GRE_empowered_parliament:0 "Empowered Parliament"
-GRE_divine_mediator:0 "Divine Mediator"
-GRE_general_staff:0 "Expanded General Staff"
-GRE_aviation_industry:0 "Aviation Industry"
+GRE_privatised_industry:0 "사유화된 산업"
+GRE_nationalised_industry:0 "국유화된 산업"
+GRE_strong_executive:0 "강력한 행정부"
+GRE_empowered_parliament:0 "의회에 권한 부여"
+GRE_divine_mediator:0 "신성한 중재자"
+GRE_general_staff:0 "작전 참모 확장"
+GRE_aviation_industry:0 "항공 산업"
 GRE_efficient_navy_idea:0 "Efficient Navy"
 GRE_efficient_navy2_idea:0 "Efficient Navy"
 GRE_ambitious_navy_idea:0 "Ambitious Navy"
@@ -90,21 +90,21 @@ GRE_new_expansionism_idea:0 "New Expansionism"
 GRE_new_expansionism2_idea:0 "New Expansionism"
 
 ### Tooltips ###
-GRE_republicans_win_referendum:0 "Republicans have won the referendum"
-GRE_monarchists_win_referendum:0 "Monarchists have won the referendum"
-GRE_1938_elections_happened:0 "The 1938 elections have been held"
-GRE_increase_monarchist:0 "Monarchist sympathies in Greece will be increased\n"
-GRE_decrease_monarchist:0 "Monarchist sympathies in Greece will be decreased\n"
+GRE_republicans_win_referendum:0 "공화주의자들이 선거에서 이김"
+GRE_monarchists_win_referendum:0 "왕정주의자들이 선거에서 이김"
+GRE_1938_elections_happened:0 "1938년 선거가 열림"
+GRE_increase_monarchist:0 "그리스에서 왕정에 대한 지지가 증가할 것입니다.\n"
+GRE_decrease_monarchist:0 "그리스에서 왕정에 대한 지지가 감소할 것입니다.\n"
 GRE_stole_industry1:0 "Nationalized our Investments"
 GRE_stole_industry2:0 "Nationalized our Investments"
 GRE_aided_industry:0 "Bailed Out our Investments"
-GRE_applied_sanctions:0 "Trade Sanctions"
+GRE_applied_sanctions:0 "무역 제재"
 GRE_they_applied_sanctions1:0 "They applied Trade Sanctions"
 GRE_they_applied_sanctions2:0 "They applied Trade Sanctions"
-GRE_lost_balkans_war:0 "Lost the Balkans War"
-GRE_regained_macedonia:0 "Macedonia has been regained"
-GRE_rigged_for_monarchy:0 "An attempt will be made to rig the referendum in favour of the monarchy - it has a chance of being exposed\n"
-GRE_rigged_for_republic:0 "An attempt will be made to rig the referendum in favour of the republic - it has a chance of being exposed\n"
+GRE_lost_balkans_war:0 "발칸 전쟁에서 패배함"
+GRE_regained_macedonia:0 "마케도니아를 되찾음"
+GRE_rigged_for_monarchy:0 "국민 투표가 왕정주의자들에게 유리하도록 조작될 것입니다 - 이는 들킬 가능성이 있습니다.\n"
+GRE_rigged_for_republic:0 "국민 투표가 공화주의자들에게 유리하도록 조작될 것입니다 - 이는 들킬 가능성이 있습니다.\n"
 GRE_referendum_is_rigged:0 "The referendum is §Yrigged§! - there is a chance of this being discovered\n"
 GRE_monarchy_guaranteed:0 "The chances of the monarchists winning the referendum is all but §Yguaranteed§!\n"
 GRE_republic_guaranteed:0 "The chances of the republicans winning the referendum is all but §Yguaranteed§!\n"
@@ -147,63 +147,63 @@ GRE_bul_part_of_faction:0 "[BUL.GetNameDef] is in a faction and still owns claim
 GRE_germany_not_still_upset:0 "[GER.GetNameDef] does not have the §YNationalized our Investments§! opinion towards us"
 
 ### Focuses ###
-GRE_black_monday_focus:0 "Black Monday"
+GRE_black_monday_focus:0 "검은 월요일"
 GRE_black_monday_focus_desc:0 "The Black Monday crisis has hit the Greek economy like a bull in a china shop, considering its domination by German businesses. It is time to take drastic action to resolve this crisis before it gets any worse."
-GRE_farming_crisis:0 "The Farming Crisis"
+GRE_farming_crisis:0 "농업 위기"
 GRE_farming_crisis_desc:0 "While the Greek economy saw strong industrial growth through the 19th century it remains primarily orientated on agriculture, and thus the sudden drop in agricultural exports has hit the country hard. Farmers are nearly at a point of rioting, and thus addressing the crisis tops our agenda."
-GRE_foreign_industry_question:0 "Foreign-Owned Industries?"
+GRE_foreign_industry_question:0 "외국 소유의 산업?"
 GRE_foreign_industry_question_desc:0 "Much of Greece's industry is owned by foreigners, mainly in Germany and Austria. With the financial crisis, many of these factories have begun to shut their doors, expecting Greece to deal with the political fallout until such a time as the economy recovers. With so many industrial workers left unpaid and out on the street, we must do something about this."
-GRE_board_of_industry:0 "The Board of Industry"
+GRE_board_of_industry:0 "산업 이사회"
 GRE_board_of_industry_desc:0 "A new government agency must be created in order to oversee an overhaul of some of Greece's rather outdated industrial laws and practices."
-GRE_greek_mining:0 "Advancements in Mining"
+GRE_greek_mining:0 "광업의 진보"
 GRE_greek_mining_desc:0 "Much of our country's mining equipment and methods are rather old, sometimes dating back to the mid-19th century. We should encourage companies to update their equipment and research, in order to increase production."
-GRE_greek_rail:0 "Greek Railways"
+GRE_greek_rail:0 "그리스 철도"
 GRE_greek_rail_desc:0 "A program to build new railways connecting Athens to the northern part of the country will not only enhance our overall infrastructure, it will create a much-needed employment program for our industrial workers who are currently unemployed."
-GRE_land_reform:0 "Begin Land Reform"
+GRE_land_reform:0 "토지 개혁 시작"
 GRE_land_reform_desc:0 "Many of the country's agricultural communes are still overseen by wealthy landlords, with the peasants treated practically as serfs. While breaking up these holdings will be costly, it's the only way to see the farms increase their efficiency and bring us into the 20th century."
-GRE_privatize_industry:0 "Privatize Government Holdings"
+GRE_privatize_industry:0 "정부 재산 사유화"
 GRE_privatize_industry_desc:0 "There are a number of government-run businesses and factories which would best work in the hands of private individuals. They should be sold off to Greeks of means and expertise, even on the cheap, in order to diversify their portfolios and ensure that loyal citizens are enriched."
-GRE_nationalize_industry:0 "Nationalize Vital Companies"
+GRE_nationalize_industry:0 "필수 기업 국유화"
 GRE_nationalize_industry_desc:0 "Too many vital industries are ready to go bankrupt. Only the nation's government is organized and efficient enough to keep them afloat, at least until the crisis is passed and, in the meantime, they can keep the economy afloat and Greeks employed."
-GRE_military_conversion:0 "Convert Military Factories"
+GRE_military_conversion:0 "군수 공장 전환"
 GRE_military_conversion_desc:0 "There are a number of military factories which we must consider turning over to commercial use. It means Greece will be less prepared for war in the future, but there will be no Greece if it crumbles around us thanks to the crisis."
-GRE_fund_business:0 "Take Out Loans"
+GRE_fund_business:0 "대출"
 GRE_fund_business_desc:0 "We cannot dig any deeper - the only way to bail Greece out of this crisis is to take out as many loans as we can afford, and channel that money into employment programs and funding the most promising companies willing to open new factories in Greece. It will hurt in the long run, but we have little choice."
-GRE_recovery:0 "Full Recovery"
+GRE_recovery:0 "완전한 회복"
 GRE_recovery_desc:0 "Our stimulus programs have begun to improve the economic prospects of the country for now, and the crisis is passed. Hopefully, the price we paid does not come back to haunt us."
 
-GRE_monarchy_referendum:0 "Referendum on the Monarchy"
+GRE_monarchy_referendum:0 "왕정에 대한 투표"
 GRE_monarchy_referendum_desc:0 "The legacy of the Greek monarchy still hangs over the republican government. Calls for a public referendum to determine if a monarchy should be restored for the stability of the nation, or if the republic should instead persist."
-GRE_republican_victory:0 "Republican Victory"
+GRE_republican_victory:0 "공화주의의 승리"
 GRE_republican_victory_desc:0 "There is to be no king. The question was settled today, with the vote to maintain the republic and continue into the future untethered to dynasties and successions."
-GRE_strengthen_republic:0 "Strengthen the Republic"
+GRE_strengthen_republic:0 "공화국 강화"
 GRE_strengthen_republic_desc:0 "The republic may have won the day, but monarchists still remain. By taking steps to reform the legal system and remove any and all remnants of monarchy from official proceedings we can move towards the permanent establishment of a republican nation."
-GRE_monarchist_question:0 "The Remaining Monarchists"
+GRE_monarchist_question:0 "남겨진 왕정주의자"
 GRE_monarchist_question_desc:0 "There are still many within the government, and especially the army, who yet hold loyalties to the monarchy. We must consider whether to purge them now, to prevent the possibility of a future coup, or to let them remain and potentially disrupt the republic's operation."
-GRE_empowered_parliament:0 "An Empowered Parliament"
+GRE_empowered_parliament:0 "의회에 권한 부여"
 GRE_empowered_parliament_desc:0 "In order to ensure that strongmen and dictators cannot exploit the system, the Greek nation must have a strong parliament capable of controlling the head of state, if necessary."
-GRE_strong_executive:0 "A Strong Executive"
+GRE_strong_executive:0 "강력한 행정부"
 GRE_strong_executive_desc:0 "In order to ensure that political infighting does not bring us down, the Greek nation must have a strong head of state who can overrule parliament, if necessary."
-GRE_balkan_democracy:0 "Balkan Democracy"
+GRE_balkan_democracy:0 "발칸 민주주의"
 GRE_balkan_democracy_desc:0 "Greece is a bastion of democracy in the Balkans, and must shine like a beacon of freedom for all to see."
-GRE_monarchist_victory:0 "Monarchist Victory"
+GRE_monarchist_victory:0 "왕정주의의 승리"
 GRE_monarchist_victory_desc:0 "The kingdom shall be restored! Today the debate was settled, though now talk has turned to which king it should be: the younger Alexander, who was king before his exile, or the older George, who should have been king before Alexander and only was not due to being exiled with his father years before."
-GRE_king_alexandros:0 "King Aléxandros"
+GRE_king_alexandros:0 "알렉산드로스 왕"
 GRE_king_alexandros_desc:0 "First crowned in 1917 and later exiled, King Alexander shall be returned to the throne. A moderate man used to being a figurehead, he shall serve as a constitutional monarch with only the minimum of formal powers."
-GRE_republican_question:0 "The Remaining Republicans"
+GRE_republican_question:0 "남겨진 공화주의자"
 GRE_republican_question_desc:0 "With the king now back on the throne, a question lingers regarding what should be done with those who most oppose him and advocate a return to republican rule. The king advocates mercy, but would that only leave Greece to the possibility of more coups in the future?"
-GRE_empower_the_throne:0 "Empower the Throne"
+GRE_empower_the_throne:0 "왕권 강화"
 GRE_empower_the_throne_desc:0 "It seems Alexander has learned a thing or two in his exile and has been exerting his will on parliament more forcefully. He has garnered enough support to gain power enough to overrule the elected leaders when needed, making him far from the figurehead many assumed he would be."
-GRE_king_georgios:0 "King Geórgios"
+GRE_king_georgios:0 "게오르기오스 왕"
 GRE_king_georgios_desc:0 "A military man from an early age, Prince George is the eldest son of the late King Constantine and shall create a strong monarchy along German lines, where the King serves as a brake on the powers of parliament."
-GRE_purge_republicans:0 "Purge Republicans"
+GRE_purge_republicans:0 "공화주의자를 처형"
 GRE_purge_republicans_desc:0 "A new king is on the throne, and his wishes are clear: those who yet harbour republican sentiment must be purged from the government and the army, lest the country fall into disorder once again."
 GRE_guide_parliament:0 "Guide Parliament"
 GRE_guide_parliament_desc:0 "We must support the great Greek tradition of democracy, but like Plato's Philosopher King the monarch must always be there to guide the nation towards a more perfect and peaceful society. By granting the monarch significant royal prerogatives to dissolve parliament as he wishes we can ensure that it is always well lead."
-GRE_divine_mediator:0 "A Divine Mediator"
+GRE_divine_mediator:0 "신성한 중재자"
 GRE_divine_mediator_desc:0 "The king stands as a divinely anointed ruler, chosen by both God and the people to defend them from radicalism and instability. By mediating between all branches of government he can ensure that his will is followed, the dignity of the state is preserved and the people's needs can be made known to him."
 
-GRE_elections_1938:0 "1938 Elections"
+GRE_elections_1938:0 "1938년 선거"
 GRE_elections_1938_desc:0 "The elections of 1938 are promising to be most interesting, and as is typical for Greece it appears that many outcomes are possible."
 GRE_soc_liberals:0 "Néa Fileléftheri Énosi"
 GRE_soc_liberals_desc:0 "The more socially liberal elements of the Liberal Party have secured their hold, and have begun an extensive programme of social and political reforms designed to make a more just and liberal Greece."
@@ -348,7 +348,7 @@ GRE_expand_armaments_1:0 "Invest in Armaments"
 GRE_expand_armaments_1_desc:0 "We cannot rely solely on private industry to supply our armies - we need to build armament factories of our own if Greece is to become a true military power."
 GRE_expand_armaments_2:0 "The Pyrkal Deal"
 GRE_expand_armaments_2_desc:0 "The Greek Powder & Cartridge Company is one of the oldest and largest defence companies in Greece. We must partner with them and provide subsidies that will ensure they benefit as well as our army for having a supplier so close to home."
-GRE_legacy_of_alexander:0 "Legacy of Alexander"
+GRE_legacy_of_alexander:0 "알렉산더의 유산"
 GRE_legacy_of_alexander_desc:0 "Alexander the Great took Greek civilization to the ends of the known world and shaped an age of history with his own two hands. Of course, he couldn't have done it without the finest Greek soldiers, and now we have those too. While we harbour no such lofty ambitions, we will march forward knowing that nowhere in the world can finer soldiers be found."
 
 GRE_evaluate_air_force:0 "Polemikí Aeroporía"
@@ -474,7 +474,7 @@ GRE_balkans_mission:0 "Improve Balkans Co-operation"
 GRE_balkans_mission_desc:0 "Our relations with [From.GetNameDef] are decent enough that we should consider sending a mission to their government to foster greater cooperation between our countries."
 
 ### Events
-gre.1.t:0 "The Fourth Hellenic Republic"
+gre.1.t:0 "제4 헬레네 공화국"
 gre.1.d:0 "The years since Greece's loss in the Weltkrieg have seen little but upheaval and hardship. The loss of Crete and Macedonia to the Treaty of Salonika and crippling war debts to Austria and Germany sent King Alexander fleeing into exile as the Third Republic was declared... only to result in years of failed governments and coups until Georgios Kondylis took control in 1926 and declared himself the permanent Regent of Greece, even though its king remained in exile. Kondylis was finally overthrown and executed in 1931, leading to the Fourth Republic and the coalition government of Geórgios Papandreou which won its first election."
 gre.1.a:0 "Goodness!"
 gre.2.t:0 "The Challenges Ahead"
