--- a/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
@@ -23,9 +23,9 @@ GRE_national_populist_party:0 "EEL"
 GRE_national_populist_party_long:0 "민족 그리스 군단"
 
 ### Ideas ###
-GRE_legacy_of_alexander_idea:0 "알렉산드로스의 유산"
+GRE_legacy_of_alexander_idea:0 "알렉산더의 유산"
 GRE_legacy_of_alexander_idea_desc:0 "The Greeks are a people accustomed to war, and nothing stirs them up quite as the thought of their hard-won independence being taken away once more."
-GRE_legacy_of_alexander2_idea:0 "알렉산드로스의 유산"
+GRE_legacy_of_alexander2_idea:0 "알렉산더의 유산"
 GRE_legacy_of_alexander2_idea_desc:0 "The Greeks are a people accustomed to war, and nothing stirs them up quite as the thought of their hard-won independence being taken away once more."
 GRE_memories_of_king:0 "왕국의 기억"
 GRE_memories_of_king_desc:0 "While the Greek monarchy was officially abolished in 1931 after a tumultuous decade of coups and counter-coups, there are still those within our nation who continue to abide by monarchist principles, and are a major source of unrest within our nation."
