--- a/Kaiserreich Korean Translation/localisation/KR_Switzerland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Switzerland_l_english.yml
@@ -500,8 +500,8 @@ swiss.47.t:0 "스위스가 카이저 빌헬름 학회에 가입하다"
 swiss.47.d:0 "Compounding on our newfound influence in our southern neighbour Switzerland, Swiss scientists have begun to move to take part in the Kaiser Wilhelm Society. These scientists will join our own research efforts and will hopefully create new opportunities for both our nations."
 swiss.47.a:0 "Fantastic."
 swiss.48.t:0 "헬베틱 코뮌의 설립"
-swiss.48.d:0 "Emotions were largely muted at the official signing of the papers that would make the new Helvetic Commune the official government in Switzerland, cementing the power of Syndicalism in governmental strucutre for the forseeable future. Drawing on inspiration from the Helvetic Republic of old, the new Directorate promises to lead the Swiss people in a fashion that will benefit all Swiss people, and uphold their values for decades to come."
-swiss.48.a:0 "A new dawn awaits!"
+swiss.48.d:0 "Emotions were largely muted at the official signing of the papers that would make the new Helvetic Commune the official government in Switzerland, cementing the power of Syndicalism in governmental structure for the foreseeable future. Drawing on inspiration from the Helvetic Republic of old, the new Directorate promises to lead the Swiss people in a fashion that will benefit all Swiss people, and uphold their values for decades to come."
+swiss.48.a:0 "새로운 새벽이 기다리고 있다!"
 swiss.49.t:0 "헬베틱 코뮌의 탄생"
 swiss.49.d:0 "Thunderous applause from the steps of the capital building as Georges Oltramare was sworn in as the first and sole Director of the new Helvetic Commune. Rising to prominence on a wave of popularity due to his advocacy of the "Strong Hand" approach to revitalizing Switzerland, the new Director has made promises that the mistakes of old will not be repeated, and that the new Helvetic Commune will stand tall as a proper pwer in Europe."
 swiss.49.a:0 "Georges Oltramare is our future!"
@@ -920,6 +920,9 @@ swiss.177.a:0 "But why?"
 swiss.178.t:0 "Chaos in Haute-Savoie!"
 swiss.178.d:0 "With French support and a lax military presence in the region, French saboteurs have managed to stir unrest in Haute-Savoie, and the administration will be forced to spare extra resources to maintain the peace. We must maintain a stronger military presence if we are to keep the region stable."
 swiss.178.a:0 "We were too lax!"
+swiss.179.t:0 "코뮌이 패배하다"
+swiss.179.d:0 "The Commune of France has found itself soundly defeated and removed from the landscape of Europe. With the largest threat to our nation now a thing of the past, we no longer have to worry about the looming threat of war."
+swiss.179.a:0 "Peace reigns!"
 
 ### Parties ###
 SWI_national_populist_party:0 "SVV"
@@ -987,4 +990,3 @@ SWI_very_unlikely:0 "§RThe Swiss are extremely unlikely to accept.§!\n"
 SWI_likely:0 "The Swiss are likely to accept.\n"
 SWI_helvetia:0 "The §YEKS Helvetia§! will be put to sea"
 SWI_syndie_advance:0 "§RThis will do little to slow Syndicalist movements inside the nation.§!"
-POLITICS_SWITZERLAND_COUNCIL_DESC:0 "Founded in 1848, the Swiss Federal Council is a seven-member executive council which serves as the collective head of state for Switzerland. Each council member heads one of seven different federal departments, and the position of Federal President moves between the seven Councillors every year, with the current year's Vice President serving as the next year's President."
