--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -22,7 +22,7 @@ RUS_caucasus_focus2:0 "코카서스 방향"
 GER_respect_brest_litovsk1:0 "러시아가 브레스트-리토프스크 조약 준수를 요구함"
 GER_respect_brest_litovsk2:0 "러시아가 브레스트-리토프스크 조약 준수를 요구함"
 GER_respect_brest_litovsk3:0 "러시아가 브레스트-리토프스크 조약 준수를 요구함"
-GER_dont_care_caucasus:0 "Let us be"
+GER_dont_care_caucasus:0 "우리를 신경쓰지 않음"
 DKB_joined_mitteleuropa1:0 "제국협정 가입"
 DKB_joined_mitteleuropa2:0 "제국협정 가입"
 DKB_joined_mitteleuropa3:0 "제국협정 가입"
@@ -321,8 +321,8 @@ rus_cw_very_low:0 "러시아 내전"
 rus_cw_low:0 "러시아 내전"
 rus_cw_average:0 "러시아 내전"
 sov_cw_militias:0 "적위 민병대"
-sov_cw_officers:0 "Officer Command"
-sov_cw_armed_camp:0 "An Armed Camp"
+sov_cw_officers:0 "장교 사령부"
+sov_cw_armed_camp:0 "무장 캠프"
 rus_more_MP_focus:0 "Mobilisation of the Masses"
 rus_better_infantry_production_focus:0 "Standardised Infantry Equipment"
 training_barracks:0 "Local Training Barracks"
@@ -342,17 +342,17 @@ rus_new_industry_focus:0 "새로운 산업"
 rus_conbrig_focus:0 "여단 조직"
 rus_magic_trick_focus:0 "전쟁준비 계획"
 rus_great_library_focus:0 "대도서관"
-rus_moveable_feast_focus:0 "A Movable Feast"
+rus_moveable_feast_focus:0 "움직이는 축제"
 rus_bastion_democracy_focus:0 "민주주의의 요새"
 rus_great_works_focus:0 "거대 공공사업"
 rus_esprit_de_corps_focus:0 "Natsgvardiya"
 rus_esprit_de_corps_focus1:0 "Combat Squads at the factories"
 rus_war_industry_focus:0 "전시 산업"
-rus_autarky_focus:0 "Established Autarky"
+rus_autarky_focus:0 "아우타키 설립"
 rus_yunarmiya_focus:0 "Yunarmiya"
 rus_educate_the_masses_focus:0 "Educate the Masses"
 rus_mechanization_focus:0 "Mechanisation of Agriculture"
-rus_party_land:0 "Party Land"
+rus_party_land:0 "파티 랜드"
 rus_radio_propaganda_focus:0 "차르의 목소리"
 rus_neoslavism_focus:0 "신 슬라브주의"
 rus_imperial_glory_focus:0 "황제의 영광"
@@ -522,11 +522,11 @@ RUS_DMI_IND3_desc:0 "With Russia's economy once again looking strong there's no 
 
 RUS_DMI_POL1:0 "법률 합리화"
 RUS_DMI_POL1_desc:0 "During the reign of Kerensky, Russian legislation constituted a bunch of the old imperial laws and some temporary laws, which were used after the Civil War. Using old groundwork of the imperial lawyers, Dmitri Pavlovich is going to restore his authority over all Russian territories and control local elites through the new laws, such as Criminal and Civil Codes."
-RUS_DMI_POL2:0 "A Movable Feast"
+RUS_DMI_POL2:0 "움직이는 축제"
 RUS_DMI_POL2_desc:0 "From the far west to the far east, in every single palace of the nobles, feasts are held. Russia is rich, proud and stable yet again. A happy ruling class will in turn lead to a happy populace, or so is the theory at least."
 RUS_DMI_POL3:0 "상원의 권력에서 빠져나오자"
 RUS_DMI_POL3_desc:0 "While the Duma is more or less powerless, the Senate still, from time to time, tries to put reins on the Tsar. It's time that we simply outmanoeuvre them politically. The people does not care for or want a Senate, when they have a Tsar!"
-RUS_DMI_POL4:0 "Expansion of the 'Rumyantsev library'"
+RUS_DMI_POL4:0 "'루만쳬프 도서관' 확장"
 RUS_DMI_POL4_desc:0 "The Rumyantsev Museum was Moscow's first public museum founded in 1831. Its collection of manuscripts and incunabula is large and we definitely should build a new building for the library, where the new generations of the Russian students will be able to educate themselves for the benefit of our country."
 
 RUS_ARI_POL1:0 "귀족 군대"
@@ -547,17 +547,17 @@ RUS_WRA_IND1:0 "Korporatsiya Yusupova"
 RUS_WRA_IND1_desc:0 "'Korporatsiya Yusupova' (Yusupov's Corporation), a united civil and military engineering organisation, has launched several industrial projects, which will reduce our dependence on German goods, provide our army with new arms and help us bring down unemployment. It is however necessary to provide his corporation with the legal privileges to compete with foreign factories."
 RUS_WRA_IND2:0 "ZIR"
 RUS_WRA_IND2_desc:0 "'Zavod imeni Ryabushinskogo' or just 'ZIR' ('Ryabushinsky Plant') was founded in 1916 in Moscow and produced 1.5 tonne trucks for the Russian Army. We should expand this factory, as the reorganisation of our industry and agriculture can't be executed without cheap, modern trucks. These workplaces with decent salary will allow us to reduce unemployment in Moscow."
-RUS_WRA_NG1:0 "Party Land"
+RUS_WRA_NG1:0 "파티 랜드"
 RUS_WRA_NG1_desc:0 "As the Vozhd of the Peasants, Savinkov has promised that the Russian peasants will get more agricultural lands. Now he can finally fulfil his promises. The NRPR has concluded an agreement with landowners who support our party - they will sell their lands to us, but will get a rent from the peasants for 5 years. Even if the peasants can't pay their rent, our party will compensate the landowners."
 RUS_WRA_LA1:0 "노동군"
 RUS_WRA_LA1_desc:0 "Not all members of the Combat Squads want to enrol in the army but there are other ways to support the state. The Labour Army was proposed to the SPC to rebuild the infrastructure in the Central Russia. The workers will earn a fixed salary, but have to work no less than 6 months. This policy will allow Russia to rebuild and protect itself from foreign economic aggressions."
 RUS_WRA_POL1:0 "Centralised Apparatus of Power"
 RUS_WRA_POL1_desc:0 "The state of affairs in the Russian state requires a full-scale reorganisation of public powers. The regional governments, the corrupt officials as well as the independent authorities that operated before shall now only obey to the Vozhd, and only to the Vozhd."
-RUS_WRA_POL2:0 "Yunarmiya"
+RUS_WRA_POL2:0 "유나르미야"
 RUS_WRA_POL2_desc:0 "Because of the civil war in Russia, millions of Russian children became orphans. President Kerensky did almost nothing to improve their lives, but Boris Savinkov has other plans. The organisation 'Yunaya Armiya' ('Young Army') has begun to militarise the asylums and school of the children. The coming generations of the Russian people will get a chance to improve their lives and become builders of a new society."
-RUS_WRA_POL3:0 "Natsgvardiya"
+RUS_WRA_POL3:0 "나츠그바르디야"
 RUS_WRA_POL3_desc:0 "The Combat Squads of the NRPR helped us to restore order in the country, but now it is the right time to expand the Squads into 'Natsgvardiya' ('National Guard'), which will defend Russia from the various external threats. We are sure, that the professional soldiers of the 'Natsgvardiya' will become an example for the whole Russian Army."
-RUS_WRA_POL4:0 "신 러시아"
+RUS_WRA_POL4:0 "새로운 러시아"
 RUS_WRA_POL4_desc:0 "보리스 사빈코프는 전 세계가 의식할 강대한 러시아를 건설하겠다고 선언했습니다. 하지만 새로운 국가는 새로운 사회를 필요로 합니다: 용기와 건강, 그리고 노동은 우리의 원칙이 될 것이며, 총통은 이 어려운 시기를 이겨낼 수 있는 국가를 이끌어갈 유일한 인물로서 모두에게 존경받을 것입니다."
 
 RUS_stratocrat:0 "군사 정부"
@@ -592,13 +592,13 @@ RUS_okhrana_div_desc:0 "The Okhranka was given posts in our military high comman
 okhrana_div:0 "Gives §G10% recovery rate§!"
 
 can_only_have_one_reform:0 "§GYou can only take one of the plans to reform the army, choose wisely!§!"
-RUS_reform_denikin:0 "Reform the Army: Denikin's Plan"
+RUS_reform_denikin:0 "육군 개혁: 데니킨의 계획"
 RUS_reform_denikin_desc:0 "Field marshal Denikin is popular with the politicians and most of our officer corps. To go through with his plans for the army would be an easy affair. He suggests that Russia should rely on our huge numbers to win any future wars, but also insists that a motorisation of our forces is necessary."
-RUS_more_MP:0 "Mobilisation of the Masses"
+RUS_more_MP:0 "대중 동원"
 RUS_more_MP_desc:0 "Denikin, wise from the experience of the Weltkrieg, knows that the Russian army is unstoppable once the numbers are provided. It's time we provide them with a new recruitment programme."
-RUS_infantry_tech:0 "Army Modernisation"
+RUS_infantry_tech:0 "육군 현대화"
 RUS_infantry_tech_desc:0 "No matter what plan we rely on, we have to modernise not only our tactics, but indeed our very rifles and general equipment."
-RUS_better_infantry_production:0 "Standardised Infantry Equipment"
+RUS_better_infantry_production:0 "표준화된 보병 장비"
 RUS_better_infantry_production_desc:0 "By standardising our equipment, and how we produce it, we can assure that our ever-growing army will never lack for rifles. Unarmed men will serve the army quite poorly, or so the generals tell us."
 RUS_training_barracks:0 "지역 훈련소"
 RUS_training_barracks_desc:0 "Every city, every town, every hamlet should hold their own army barracks, where low ranking officers train the local men into militia formations. This will help our high command find the men most suited for active service and should shorten the time needed for regular training."
@@ -607,31 +607,31 @@ RUS_infantry_tech2_desc:0 "We have come some part of the way, but there's still 
 RUS_infantry_tech3:0 "현대화 종결"
 RUS_infantry_tech3_desc:0 "Just like Denikin envisioned, we now have a large, well-equipped army applying modern tactics. The Russian army will be unstoppable, Russia unconquerable. There will not be another Brest-Litovsk!"
 
-RUS_reform_wrangel:0 "Reform the Army: Wrangel's Plan"
+RUS_reform_wrangel:0 "육군 개혁: 브란겔의 계획"
 RUS_reform_wrangel_desc:0 "Wrangel, while not as widely respected as Denikin, is still popular with some parts of the military. He believes in discipline and is respected far and wide for his administrative abilities. With extensive planning and a general motorisation, he believes he can make the Russian army the greatest in the world!"
-RUS_military_infrastructure:0 "Military Infrastructure Development"
+RUS_military_infrastructure:0 "군사 기반시설 개발"
 RUS_military_infrastructure_desc:0 "Wrangels plans require large amounts of preparation, including setting up important supply points at key locations. Railroads and highways must stretch from end to end in Russia!"
-RUS_doctrine_tech:0 "Reorganise the Military High Command"
+RUS_doctrine_tech:0 "군사 사령부 재조직"
 RUS_doctrine_tech_desc:0 "The Military High Command holds many fossils of old who have learned little from the Weltkrieg and the civil war. They need to be replaced with people who understand the type of warfare we hope to conduct."
-RUS_bomber_tech:0 "Disorganisation Effort"
+RUS_bomber_tech:0 "해체 주력"
 RUS_bomber_tech_desc:0 "Enemy land forces can be defeated safely from the air, often even without directly engaging them. Our bombers could be used to disrupt supply lines and take out key industry far from the battle front."
-RUS_planning_school:0 "National Planning School"
+RUS_planning_school:0 "국립 계획 학교"
 RUS_planning_school_desc:0 "Wrangel believes that Russia doesn't need to rely on 'wasting lives' at the front lines, if our officers receive proper training and stick to our closely monitored battle plans. New officer schools designed to train young officers on how to follow these plans should be set up."
-RUS_special_forces:0 "Special Forces Office"
+RUS_special_forces:0 "특수 부대"
 RUS_special_forces_desc:0 "Our chief of staff believes that while weight isn't bad, finesse is definitely the better option. With elite units trained for specific circumstances, we can cut enemy lines apart."
 RUS_air_office:0 "VVSR Office"
 RUS_air_office_desc:0 "The VVSR (Voyenno-Vozdushnye Sily Rossii, literally 'Russian military air force') is badly outdated. We use the same planes and tactics today that we did twenty years ago. By expanding our air-bases and training new recruits we could change this."
 RUS_naval_bomber_tech:0 "해상 폭격기 개발"
 RUS_naval_bomber_tech_desc:0 "At sea, a single wing of naval bombers can be just as efficient as any ship. We need to develop this type of bomber further."
-RUS_paratroopers_tech:0 "Found the VDV"
+RUS_paratroopers_tech:0 "VDV 창설"
 RUS_paratroopers_tech_desc:0 "Some of the more experimental members of our Chief of Staff suggests that the motorisation of our troops was only the first step. The next step would be to move infantry not by ships or by trucks, but by planes! By dropping so called paratroopers behind enemy lines we can cut off enemy units and hit supply points."
-RUS_radar_focus:0 "The ORT System"
+RUS_radar_focus:0 "ORT 시스템"
 RUS_radar_focus_desc:0 "The Okhrana are ready to set up a so-called Radio Technology System, inspired by foreign technologies. They believe they could keep track of any hostile troop movements if only they are fed enough resources."
 
-RUS_reform_shatilov:0 "Reform the Army: Shatilov's Plan"
+RUS_reform_shatilov:0 "육군 개혁: 샤틸로프의 계획"
 RUS_reform_shatilov_desc:0 "Shatilov is a veteran from both the front lines and the staff quarters. While not the first choice of the Military command he does have a circle of close allies who all advocate theories of overwhelming firepower, hammering enemy positions with artillery before attacking. Additionally, more initiative and responsibility needs to be given to the officer at the front-line."
 generals_gain_skillz:0 "§YPavel Shatilov§!, §YAnton Turkul§!, §YAlexei Kaledin§! and §YNikolai Timanovsky§! will gain §G1§! skill, §YVladimir Von Manstein§! will gain §G2§! skills. \n"
-RUS_airdoctrine_tech:0 "Wing Formations"
+RUS_airdoctrine_tech:0 "공중 대형"
 RUS_airdoctrine_tech_desc:0 "Every single pilot needs to operate closer together with smaller formations of planes, divided into squadrons and wings."
 RUS_army_experience:0 "Initiative to the Commanders"
 RUS_army_experience_desc:0 "Shatilov believes we should give our lower ranking officers clear goals and resources to fulfil those goals, but leave the planning in their hands. This will allow them to take local circumstances into consideration and help them respond accordingly to any changes in those circumstances, making our forces more flexible."
@@ -747,15 +747,15 @@ russia.4.d:0 "With stagnation of our economy and worsening conditions of our cit
 russia.4.a:0 "Excellent!"
 
 russia.5.t:0 "케렌스키 암살"
-russia.5.d:0 "The sound of gunfire rings across the capital. Aleksandr Kerensky, the President of the Russian Republic was shot and killed by an assassin while he was climbing the steps to the Senate House. His killer was shot dead by the military police before he could make his escape. His motives will forever be unknown. Regardless, the fate of Russia has been irrevocably changed, for better or worse."
+russia.5.d:0 "총성이 수도 전역에 울렸습니다. 러시아 공화국의 대통령인 알렉산드르 케렌스키가 상원회에 오르고 있을 때 괴한에 의해 암살되었습니다. 괴한은 탈출하기 전에 헌병에 의해 사살되었습니다. 때문에 살해동기는 알려지지 않았습니다. 그럼에도 불구하고, 러시아의 운명은 좋든 나쁘든간에 바꿀 수 없게 되버렸습니다."
 russia.5.a:0 "이 총알 한발이 세계를 휩쓸 것이다."
 
 russia.6.t:0 "케렌스키 암살의 후폭풍"
-russia.6.d:0 "The assassination of our long term president, Aleksandr Kerensky, has thrown the country into chaos. With the president gone the governing coalition of Kadets and Social Revolutionaries has collapsed and four forces look ready to seize control of the broken nation."
-russia.6.a:0 "The Left SR-Mensheviks secure a majority in the Duma."
-russia.6.b:0 "Baron Wrangel declares martial law and dissolves the Duma."
-russia.6.c:0 "Kornilov's officers seize the apparatus of state!"
-russia.6.e:0 "The Senate elects Grand Duke Dmitri as the new President."
+russia.6.d:0 "장기 집권하던 우리의 대통령이었던 알렉산드르 케렌스키의 암살은 나라를 혼란에 빠뜨렸습니다. 대통령이 암살되면서 카데트와 사회 혁명파 연정이 무너졌으며 4개의 세력이 부숴진 국가의 통제권을 장악 할 준비를 하고 있습니다."
+russia.6.a:0 "좌파 사회혁명파-멘셰비키가 두마의 과반석을 갖는다."
+russia.6.b:0 "바론 브란겔이 계엄령을 선포하고 두마를 장악한다."
+russia.6.c:0 "코닐로프의 장교진은 국가 기관을 점령한다!"
+russia.6.e:0 "상원은 대공 드미트리를 새로운 대통령으로 선출한다."
 
 dmitri_power:0 "§RThe paternal autocrat Dmitri Romanov takes power in the republic.§!\n"
 wrangel_power:0 "§RThe authoritarian democrat Pyotr Wrangel takes power in the republic.§!\n"
@@ -894,10 +894,10 @@ russia.22.t:0 "Neo-Slavic Revival"
 russia.22.d:0 "With the Russian situation slowly stabilising, some politicians, philosophers and scholars are attempting to revive the 19th century concept of Pan-Slavism, a vision of a united Slavic federation, centred around Russia. These ideas are gaining quick support among the conservative military officers, including Anton Denikin and Pyotr Wrangel."
 russia.22.a:0 "An interesting concept indeed!"
 
-russia.23.t:0 "The Capital"
-russia.23.d:0 "Either of Russia's historic capitals could become the home of our government. Where should we go?"
-russia.23.a:0 "Petrograd!"
-russia.23.b:0 "Moscow!"
+russia.23.t:0 "수도"
+russia.23.d:0 "러시아의 역사적인 수도 중 한 곳이 우리 정부의 중심이 될 수 있습니다.. 어디로 가야할까요?"
+russia.23.a:0 "페트로그라드!"
+russia.23.b:0 "모스크바!"
 
 russia.24.t:0 "Novye Bolsheviki Bloc is founded"
 russia.24.d:0 "With Kerensky's assassination and the dissolution of the SR-Kadet coalition a great reshuffling of the Russian political scene has taken place. The most visible result of the process was the creation of the so-called New Bolshevik bloc, a conglomerate of the Civil War survivors, radical former Mensheviks and SR members as well as fresh Syndicalist blood. It is very possible that this bloc will take part in the nearest Duma elections, should the situation finally stabilise."
